--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
+    "csv-parser": "^3.0.0",
     "csv-writer": "^1.6.0",
     "discord.js": "^14.9.0",
     "dotenv": "^16.0.3",
+    "fs": "^0.0.1-security",
     "lodash": "^4.17.21",
+    "node-cron": "^3.0.3",
     "puppeteer": "^22.5.0"
   }
 }
